api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: linguist-system-backend
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway-container
          image: api-gateway
          resources:
            limits:
              memory: 2000Mi
              cpu: 2
            requests:
              memory: 1000Mi
              cpu: 1
          ports:
            - containerPort: 8070
      imagePullSecrets:
        - name: reg-sample
